added more detailed methods

--- a/content/04.results-and-discussion.md
+++ b/content/04.results-and-discussion.md
@@ -174,10 +174,10 @@ Where $\sigma$ is a substituent constant and $\rho$ is a reaction constant. It a
 of substituents from the sterics effects of a reaction. Here, we generated a combinatorial set of meta and para subsituted phenyls
 and pyridine @fig:subsituted_phenyls A with 25 functional groups that cover a wide range of electron donating and withdrawing groups.
 We then calculated the ELF10 WBO for the bond attaching the functional
-group to the aromatic ring for all functional groups which resulted in 128 (25*5+3) data points for each functional group. This allowed us to isolate the effect on a bond's WBO from remote chemical environment changes,
+group to the aromatic ring for all functional groups which resulted in 128 (25 * 5 + 3) data points for each functional group. This allowed us to isolate the effect on a bond's WBO from remote chemical environment changes,
 defined as a change more than two bonds away, from other effects such as sterics and conformations. The resulting distributions are in figure @fig:subsituted_phenyls, B.
 It is interesting to note that the trend of decreasing WBOs for more electron
-donating groups are anti correlates with increasing Hammett substituent constants. In {@fig:ubsituted_phenyls} C and D, the AM1 ELF10 WBO of the bond
+donating groups are anti correlates with increasing Hammett substituent constants. In {@fig:subsituted_phenyls} C and D, the AM1 ELF10 WBO of the bond
 between the functional group and benzoic acid is plotted against their Hammett para and meta substituent constants. Functional groups
 that are more electron donating will have more electron density on the bond attaching the functional group to the benzoic acid. The resonance and/or inductive effect
 destabilize the benzoate, increases its pKa, which corresponds to lower substituent constants.
