--- a/content/06.detailed_method.md
+++ b/content/06.detailed_method.md
@@ -1,6 +1,58 @@
 # Detailed method
 
-* How the subsituted phenyl set was generated
-* QCArchive datasets, how they were generated and how to access them
-* Fragmentation scheme - how to grow out the molecule
-* Details on how to generate exhaustive fragmentation and WBO distributions
+## QCArchive automates QC data generation and archives the resulting data
+### Submitting computations to QCArchive ensures reproducibility
+`[Hold for Daniel to write up]`{.red}
+
+### The level of QC theory was chosen to optimize computational efficiency and accuracy with respect to geometry
+
+## Calculating Bond orders
+
+### AM1 WBO and AM1 ELF10 WBO
+To calculate AM1 ELF10 WBO, we used OpenEye's QUACPAC toolkit [@url:https://www.eyesopen.com/quacpac] (OpenEye version 2019.Apr.2). The
+ELF10 WBO comes along free after an AM1-BCC charge fitting procedure. For ELF10 WBOs generated in this paper, we used the `get_charges` function
+in the `chemi.py` module in `fragmenter` versions v0.0.3 and v0.0.4. To calculate AM1 WBO for individual conformers, we used the `OEAssignPartialCharges`
+with the `OECharges_AM1BCCSym` option from the QUACPAC toolkit for each conformer generated with Omega [@url:https://www.eyesopen.com/omega] (OpenEye versio 2019.Apr.2)
+which is called for the `get_charges` function.
+For AM1 WBOs calculated to verify the results from the validation set, we generated conformers using the `generate_grid_conformer` function in the `chemi.py` module in `fragmenter`
+version v0.0.4.+25.gbb12030
+
+### Wiberg-Löwdin
+To calculate Wiberg-Löwdin bond orders `[Leave to Daniel to describe how this option is set in QCArchive]`{.red}
+
+## Datasets
+
+### Kinase inhibitor dataset
+The kinase inhibitor dataset consists of 43 FDA approved kinase inhibitors (smi files is in the SI) with their Omega generated conformers (OpenEye veriso 2019.Apr.2, `generate_conformers`
+function in the `chemi.py` module in `fragmenter` version v0.0.4). AM1 WBOs were calculated as described above, for all conformers of all 43 kinase inhibitors. B3LYP-D3(BJ) / DZVP Wiberg-Löwdin
+bond orders were calculated for 9 kinase inhibitors and Omega generated conformers after a B3LYP-D3P(BJ) / DZVP geometry optimization. The DFT results are available on QCArchive
+as an `OptimizationDataset` named `Kinase Inhibitors: WBO Distributions`.
+
+The variance of the WBO distributions were calculated using the numpy [@doi:10.1109/MCSE.2011.37] var function version 1.16.2 and their confidence intervals were calculated using
+arch `IIDBootsrap` function [@doi:10.5281/zenodo.2613877] version 4.8.1. To calculate the correlation matrix, we calculated the
+Pearson correlation coefficient with the numpy [@doi:10.1109/MCSE.2011.37] `corrcoef` function version 1.16.2.
+Scripts and data used to generate and analyze this dataset are in https://github.com/choderalab/fragmenter_data/tree/master/manuscript-figures/kinase_inhibitors_wbos
+
+### Subsituted phenyl dataset
+The substituted phenyl dataset consists of 3,458 substituted phenyl molecules where the substituents chosen to span a large range of electron donating and withdrawing
+groups. We arrived at 3,200 molecules by attaching 26 different functional groups to 5 scaffolds (Figure @fig:subsituted_phenyl, A) at the X~1~ position, and then
+attach the 26 functional group (and H) at the X~2~ position for a total of 133 molecules per functional group (26 * 5  + 3 (for molecules with H at the X~2~ position)).
+The AM1 ELF10 WBOs were calculated as described above. We selected molecules for QC torsion scans as follows:
+1. From the 26 functional groups, we only selected molecules from 18 functional groups, skipping X~1~s that either did not have a rotatable bond (fluorine, chlorine, Iodine,
+bromine, nitrile, oxygen), were too congested (triflouromethyl, trimethylamonium) or where the WBOs on the bonds attaching X~1~ to the phenyl ring did not change much
+with different chemical group at the X~2~ position (methyl).
+2. For the 18 functional groups, we chose molecules that were evenly spaced along the WBO range of that functional group, up to 15 molecules. While all the skipped
+functional groups for X~1~ were allowed to be at X~2~, we did not include the negative oxygen at X~2~ because OpenFF have
+not yet benchmarked the level of theory to use for anions.
+3. After selection, we had 140 molecules that we submitted to QCArchive for torsion scan. The dataset is available on QCArchive as a `TorsionDriveDataset` named
+`OpenFF Subsituted Phenyl Set 1`. This dataset also includes the biphenyl torsion scans shown in Figure @fig:bipenyls
+
+There is another subsituted phenyl set on QCArchive whose results are not shown in this paper because it was run with a different level of theory as the default
+OpenFF level of theory, included anions which we did not yet decide how to handle and did not have good coverage of WBO ranges.
+
+### Exhaustive fragmentation dataset
+
+## Fragmenting molecules
+### Modes of fragmentation
+### Parameters
+### How fragments are extended
