finished draft of detailed methods

--- a/content/04.results-and-discussion.md
+++ b/content/04.results-and-discussion.md
@@ -283,7 +283,7 @@ fragment's WBO is within the threshold of the parent WBO.
 | nitro | `([NX3+](=O)[O-])`, `([NX3](=O)=O)` |
 | ester | `[CX3](=O)[OX2H0]` |
 
-Table: Functional groups that are not fragmented. This list is not comprehensive as it only includes functional groups that were
+Table: **Functional groups that are not fragmented**. This list is not comprehensive as it only includes functional groups that were
 present in the validation set. Users can add their own functional groups they
 do not want to fragment {#tbl:fgroups}
 
@@ -306,7 +306,7 @@ on 2019-06-06) [@doi:10.1093/nar/gkx1037] with the following criteria:
 This left us with 730 small molecules `[hold for SI]`{.red}. Charged molecules exacerbates remote substituent sensitivity and many
 molecules are in charged states at physiological pH. To ensure that our dataset is representative of drugs at physiological pH, we used
 the OpenEye `EnumerateReasonableTautomers` to generate tautomers that are highly populated at pH ~7.4. This tautomer enumeration
-extended the set to 1234 small molecules `[hold for SI]`{.red}
+extended the set to 1289 small molecules `[hold for SI]`{.red}
 We then generated all possible fragments of these molecules by using a combinatorial fragmentation scheme. In this scheme, every rotatable
 bond is fragmented and then all possible connected fragments are generated where the smallest fragment has 4 heavy atoms and the largest
 fragment is the parent molecule. This scheme generated ~300,000 fragments.
