--- a/content/06.detailed_method.md
+++ b/content/06.detailed_method.md
@@ -118,7 +118,7 @@ The `PfizerFragmenter` implements the scheme developed at Pfizer and described i
 of functional groups as the `WBOFragmenter` uses. The user can also provide their own SMARTS patterns of functional groups not to fragment.
 
 3. **Using the WBO as a surrogate for changes in chemical environment**
-The `WBOFragmenter` implements the FBO scheme described in this paper. The functional groups that are not fragmented are given in table @tb:fgroups.
+The `WBOFragmenter` implements the FBO scheme described in this paper. The functional groups that are not fragmented are given in table @tbl:fgroups.
 Users can add more SMARTS patterns if needed.
 When the WBO on a central bond in a minimal fragment has been disrupted more than the threshold, remote atoms need to be added
 onto the fragment. However, there are multiple ways to grow out a fragment and enumerating all possible ways to find the best one
