added more citations

--- a/content/06.detailed_method.md
+++ b/content/06.detailed_method.md
@@ -5,6 +5,11 @@
 `[Hold for Daniel to write up]`{.red}
 
 ### The level of QC theory was chosen to optimize computational efficiency and accuracy with respect to geometry
+All QC calculations were computed at B3LYP-D3(BJ) / DZVP. This level of theory was chosen based on benchmark conducted by the
+Open Force Field consortium for fitting Parsley [@doi:]
+
+Molecular mechanics torsion scans were run on QCArchive using OpenMM [@doi:10.1371/journal.pcbi.1005659] for the energy and gradient evaluations.
+The molecules were parameterized with the OpenFF parsley Force Field (v1.0.0) [@doi:10.5281/zenodo.3483227]
 
 ## Calculating Bond orders
 
@@ -45,7 +50,7 @@ with different chemical group at the X~2~ position (methyl).
 functional groups for X~1~ were allowed to be at X~2~, we did not include the negative oxygen at X~2~ because OpenFF have
 not yet benchmarked the level of theory to use for anions.
 3. After selection, we had 140 molecules that we submitted to QCArchive for torsion scan. The dataset is available on QCArchive as a `TorsionDriveDataset` named
-`OpenFF Subsituted Phenyl Set 1`. This dataset also includes the biphenyl torsion scans shown in Figure @fig:bipenyls
+`OpenFF Subsituted Phenyl Set 1`. This dataset also includes the biphenyl torsion scans shown in Figure @fig:biphenyls
 
 There is another subsituted phenyl set on QCArchive whose results are not shown in this paper because it was run with a different level of theory as the default
 OpenFF level of theory, included anions which we did not yet decide how to handle and did not have good coverage of WBO ranges.
@@ -124,11 +129,13 @@ When the WBO on a central bond in a minimal fragment has been disrupted more tha
 onto the fragment. However, there are multiple ways to grow out a fragment and enumerating all possible ways to find the best one
 can become too computationally expensive. Therefore, we need to use heuristics to decide where to add the next atoms.
 The two heuristics available in `fragmenter` are:
-1. Shortest path length
+
+1. **Shortest path length**
 Here, the bond with the shortest path to the central bond is added next. The rationale for this heuristic is that atoms closer
 to the central bond will have a greater influence to the bond's chemical environment. If more than one connected bond has the shortest path
 to the central bond, the bond with the higher WBO is added next.
-2. Greatest WBO
+
+2. **Greatest WBO**
 Here, the bonds connected to the fragment that have the greatest WBO is added next. The rationale for this heuristic is that
 bonds with higher WBO are more likely to be involved in extended conjugation that can influence the central bond.
 
