fixed detailed methods

--- a/content/06.detailed_method.md
+++ b/content/06.detailed_method.md
@@ -4,9 +4,9 @@
 ### Submitting computations to QCArchive ensures reproducibility
 `[Hold for Daniel to write up]`{.red}
 
-### The level of QC theory was chosen to optimize computational efficiency and accuracy with respect to geometry
+### Details on QC and MM torsion scans.
 All QC calculations were computed at B3LYP-D3(BJ) / DZVP. This level of theory was chosen based on benchmark conducted by the
-Open Force Field consortium for fitting Parsley [@doi:]
+Open Force Field consortium for fitting Parsley [@url:https://openforcefield.org/news/introducing-openforcefield-1.0/#benchmarking-parsley]
 
 Molecular mechanics torsion scans were run on QCArchive using OpenMM [@doi:10.1371/journal.pcbi.1005659] for the energy and gradient evaluations.
 The molecules were parameterized with the OpenFF parsley Force Field (v1.0.0) [@doi:10.5281/zenodo.3483227]
@@ -49,8 +49,9 @@ with different chemical group at the X~2~ position (methyl).
 2. For the 18 functional groups, we chose molecules that were evenly spaced along the WBO range of that functional group, up to 15 molecules. While all the skipped
 functional groups for X~1~ were allowed to be at X~2~, we did not include the negative oxygen at X~2~ because OpenFF have
 not yet benchmarked the level of theory to use for anions.
-3. After selection, we had 140 molecules that we submitted to QCArchive for torsion scan. The dataset is available on QCArchive as a `TorsionDriveDataset` named
+3. After selection, we had 140 molecules that we submitted to QCArchive for both QC and MM torsion scan. The dataset is available on QCArchive as a `TorsionDriveDataset` named
 `OpenFF Subsituted Phenyl Set 1`. This dataset also includes the biphenyl torsion scans shown in Figure @fig:biphenyls
+
 
 There is another subsituted phenyl set on QCArchive whose results are not shown in this paper because it was run with a different level of theory as the default
 OpenFF level of theory, included anions which we did not yet decide how to handle and did not have good coverage of WBO ranges.
@@ -100,18 +101,18 @@ functional group SMARTS patterns that they wish to avoid fragmenting.
 
 | Chemical group | SMARTS pattern |
 |---|---|
-| amide | '[NX3R0][CX3](=[OX1])' |
-| sulfone |'[#16X4](=[OX1])=([OX1])' |
-| phosphine_oxide | '[PX4](=[OX1])([CX4])([CX4])' |
-| phosphon | '[PX4](=[OX1])([OX2])([OX2])' |
-| trimethyl | '[CX4!H]([CX4H3])([CX4H3])([CX4H3]) |
-| tri_halide | '[#6]((([F,Cl,I,Br])[F,Cl,I,Br])[F,Cl,I,Br])' |
-| carboxylic_acid | '[CX3](=O)[OX2H1]' |
-| ester | '[CX3](=O)[OX2H0]' |
-| dimethyl | '[CX4H1]([CX4H3])([CX4H3])' |
-| carbonyl | '[CX3R0]=[OX1]' |
-| alkyne | '[CX2]#[CX2]' |
-| nitrile | '[NX1]#[CX2]' |
+| amide | `[NX3R0][CX3](=[OX1])` |
+| sulfone |`[#16X4](=[OX1])=([OX1])` |
+| phosphine_oxide | `[PX4](=[OX1])([CX4])([CX4])` |
+| phosphon | `[PX4](=[OX1])([OX2])([OX2])` |
+| trimethyl | `[CX4!H]([CX4H3])([CX4H3])([CX4H3])` |
+| tri_halide | `[#6]((([F,Cl,I,Br])[F,Cl,I,Br])[F,Cl,I,Br])` |
+| carboxylic_acid | `[CX3](=O)[OX2H1]` |
+| ester | `[CX3](=O)[OX2H0]` |
+| dimethyl | `[CX4H1]([CX4H3])([CX4H3])` |
+| carbonyl | `[CX3R0]=[OX1]` |
+| alkyne | `[CX2]#[CX2]` |
+| nitrile | `[NX1]#[CX2]` |
 
 Table: Default functional groups that the `CombinatorialFragmenter` will not fragment. This list is not comprehensive and is
 different than the list used for the `WBOFragmenter` {#tbl:fgroups_comb}
