--- a/content/06.detailed_method.md
+++ b/content/06.detailed_method.md
@@ -36,7 +36,8 @@ as an `OptimizationDataset` named `Kinase Inhibitors: WBO Distributions`.
 The variance of the WBO distributions were calculated using the numpy [@doi:10.1109/MCSE.2011.37] var function version 1.16.2 and their confidence intervals were calculated using
 arch `IIDBootsrap` function [@doi:10.5281/zenodo.2613877] version 4.8.1. To calculate the correlation matrix, we calculated the
 Pearson correlation coefficient with the numpy [@doi:10.1109/MCSE.2011.37] `corrcoef` function version 1.16.2.
-Scripts and data used to generate and analyze this dataset are in https://github.com/choderalab/fragmenter_data/tree/master/manuscript-figures/kinase_inhibitors_wbos
+Scripts and data used to generate and analyze this dataset are in
+[github.com/choderalab/fragmenter_data/manuscript-figures/kinase_inhibitors_wbos](https://github.com/choderalab/fragmenter_data/tree/master/manuscript-figures/kinase_inhibitors_wbos)
 
 ### Subsituted phenyl dataset
 The substituted phenyl dataset consists of 3,458 substituted phenyl molecules where the substituents chosen to span a large range of electron donating and withdrawing
@@ -79,7 +80,8 @@ should not be fragmented. We used the default settings for all other options ( `
 This generated ~300,000 fragments.
 
 We then used Omega (OpenEye version 2019.Apr.2) to generate conformers for each fragment and calculated each conformer's WBOs
-as described above. All scripts used to generate this dataset are in https://github.com/choderalab/fragmenter_data/tree/master/combinatorial_fragmentation.
+as described above. All scripts used to generate this dataset are in
+[github.com/choderalab/fragmenter_data/combinatorial_fragmentation](https://github.com/choderalab/fragmenter_data/tree/master/combinatorial_fragmentation).
 The dataset is available as zip files on `(hold for link to where we will host the data)`{.red}.
 
 ## Fragmenting molecules
@@ -126,20 +128,21 @@ of functional groups as the `WBOFragmenter` uses. The user can also provide thei
 3. **Using the WBO as a surrogate for changes in chemical environment**
 The `WBOFragmenter` implements the FBO scheme described in this paper. The functional groups that are not fragmented are given in table @tbl:fgroups.
 Users can add more SMARTS patterns if needed.
+
 When the WBO on a central bond in a minimal fragment has been disrupted more than the threshold, remote atoms need to be added
 onto the fragment. However, there are multiple ways to grow out a fragment and enumerating all possible ways to find the best one
 can become too computationally expensive. Therefore, we need to use heuristics to decide where to add the next atoms.
 The two heuristics available in `fragmenter` are:
 
-1. **Shortest path length**
-Here, the bond with the shortest path to the central bond is added next. The rationale for this heuristic is that atoms closer
-to the central bond will have a greater influence to the bond's chemical environment. If more than one connected bond has the shortest path
-to the central bond, the bond with the higher WBO is added next.
+    1. **Shortest path length**
+    Here, the bond with the shortest path to the central bond is added next. The rationale for this heuristic is that atoms closer
+    to the central bond will have a greater influence to the bond's chemical environment. If more than one connected bond has the shortest path
+    to the central bond, the bond with the higher WBO is added next.
 
-2. **Greatest WBO**
-Here, the bonds connected to the fragment that have the greatest WBO is added next. The rationale for this heuristic is that
-bonds with higher WBO are more likely to be involved in extended conjugation that can influence the central bond.
+    2. **Greatest WBO**
+    Here, the bonds connected to the fragment that have the greatest WBO is added next. The rationale for this heuristic is that
+    bonds with higher WBO are more likely to be involved in extended conjugation that can influence the central bond.
 
-Both of these heuristics will sometimes give different results `[Hold for SI figure]`{.red}. We found that for the benchmark set we tested,
-the shortest path heuristic preformed better, or found more optimal fragments when compared to using the greatest WBO heuristic `[Hold for SI]`{.red}.
+    Both of these heuristics will sometimes give different results `[Hold for SI figure]`{.red}. We found that for the benchmark set we tested,
+    the shortest path heuristic preformed better, or found more optimal fragments when compared to using the greatest WBO heuristic `[Hold for SI]`{.red}.
 
