--- a/content/02.introduction.md
+++ b/content/02.introduction.md
@@ -1,4 +1,4 @@
-# Introduction
+## 1. Introduction
 
 Molecular mechanics (MM) small molecules force fields are essential to the molecular design for chemical
 biology and drug discovery, as well as the use of molecular simulation to understand the
