--- a/content/04.results-and-discussion.md
+++ b/content/04.results-and-discussion.md
@@ -1,6 +1,6 @@
-# Results
+## 3. Results
 
-## Torsion energy barriers are sensitive to the chemical environment, which can be influenced by remote substituents
+### 3.1 Torsion energy barriers are sensitive to the chemical environment, which can be influenced by remote substituents
 In most forcefields, torsions are defined by the quartet of atom types involved in the dihedral [@doi:10.1021/ja00315a051; @doi:10.1021/ja00124a002;
 @doi:10.1002/jcc.540040211; @doi:10.1021/ja9621760].
 However, the quartet of atom types do not always capture the relevant chemistry, especially when the effects
@@ -38,7 +38,7 @@ energy as a function of torsion angle of the central bond. The colors in the MM 
 **[E]** Torsion barrier heights vs WBOs. The color of the data points correspond to the highlighted bonds in **A**.
 The QC torsion barrier height is linear WBO.](images/figure_3.svg){#fig:biphenyls}
 
-## The Wiberg Bond Order quantifies the electronic population overlap between two atoms and captures bond conjugation
+### 3.2 The Wiberg Bond Order quantifies the electronic population overlap between two atoms and captures bond conjugation
 The Wiberg bond order (WBO) is a bond property that is calculated using orthonormalized atomic orbitals that are used
 as basis sets in semi-empirical QC methods[@doi:10.1002/jcc.20494]. Wiberg originally formulated it for the CNDO basis set [@doi:10/fvwkkh] but it can be
 easily extended to other semi-empirical QC methods such as AM1 [@doi:10.1021/ja00299a024] and PM3 [@doi:10.1002/jcc.540100208]. The WBO is a measure
@@ -54,14 +54,14 @@ We calculated the WBO from AM1 calculations for the biphenyl series as shown in 
 to increasing conjugation and torsion energy barrier height of the bond. When the torsion energy barrier heights are plotted against
 the WBO (fig @fig:biphenyls E), the relationship is linear with an $R^2$ of 0.97.
 
-## The WBO is an inexpensive surrogate for the chemical environment around a bond
+### 3.3 The WBO is an inexpensive surrogate for the chemical environment around a bond
 Since the WBO can be calculated from a cheap AM1 calculation, is indicative of a bond's conjugation, and is correlated with torsion energy
 barrier height, it is an attractive measure to use as a surrogate when automating fragmentation or interpolating torsion force constants. However,
 WBOs are conformational dependent [@doi:10.1039/c6ra17055b; @doi:10.1021/ja00029a005] so we investigated this dependence to understand if WBOs
 will be a robust descriptor. In addition, we also investigated the generality of the torsion energy barrier and WBO linear relationship.
 In this section we will first discuss our findings and solution to the conformational dependency and then discuss how general the linear relationship is.
 
-### Conformation dependent variance of WBOs are higher for conjugated bonds
+#### 2.3.1 Conformation dependent variance of WBOs are higher for conjugated bonds
 Since WBOs are a function of the electronic density, which is conformational dependent, WBOs change with conformation. However, not all bonds' WBOs
 change the same way with conformation. We found that WBOs for conjugated bonds have higher variance with respect to conformation and that bonds
 involved in conjugated systems have WBOs that are correlated with each other.
@@ -109,7 +109,7 @@ At higher energy conformers, the aromatic rings are out of plan and cannot conju
 conformations, the rings are in plane and can conjugate so the WBO is higher. We found that the trends discusses above are similar when using semi-empirical methods
 such as AM1 and HF3C `(hold for SI)`{.red}
 
-### Bonds in conjugated systems have highly correlated conformation-dependent WBOs
+#### 3.3.2 Bonds in conjugated systems have highly correlated conformation-dependent WBOs
 We found that certain bond orders are strongly correlated or anti-correlated with each other, indicating strong electronic coupling. As bonds in
 one conformation gain electron population overlap, the coupled bonds will decrease in electron population overlap and vice versa.
 Figure @fig:wbo_var_corr C shows the Pearson correlation coefficient for each bond WBO distribution against all other bond WBO distributions.
@@ -123,7 +123,7 @@ The bond closer to the quinazoline (bond 23-19) has WBO distribution correlated 
 chloro fluoro phenyl (bond 23-24) is not as strongly coupled with the quinazoline. The trends are similar
 for other kinase inhibitors tested as shown in `(hold for SI)`{.red}.
 
-### ELF10 provides a useful way to capture informative conformation-independent WBOs
+#### 3.3.3 ELF10 provides a useful way to capture informative conformation-independent WBOs
 
 ![**Standard deviations of conformation dependent WBO distributions are smaller than standard deviations of WBO distribution of the same bond in different chemical environments**
 The distribution of standard deviations of WBO distributions over conformations is shown in blue. The distribution of standard deviations of ELF10 WBO distributions for the same
@@ -163,7 +163,7 @@ and aromatic rings, respectively. Figure @fig:wbo_dists D shows distrbutions wit
 the expected values; 1, 1.5 and 3 for nitrogen which corresponds to single, conjugated and triple bonds and 1 and 2 for oxygens which correspond to
 single and carbonyl bonds. For the rest of this section we will be focusing on the robustness and generalizability of ELF10 WBOs.
 
-### WBOs are a robust signal to how remote substituent changes alter a bond's torsion barrier height
+#### 3.3.4 WBOs are a robust signal to how remote substituent changes alter a bond's torsion barrier height
 To investigate how resonance and electronic effects from remote substituents change the torsion energy of a bond,
 we took inspiration from the Hammett equation [@doi:10.1021/ja01280a022] of reactions involving benzoic acid derivatives.
 The Hammett equation relates meta and para benzoic acid substituents to the acid's ionization equilibrium constants
@@ -238,7 +238,7 @@ When we compare the standard deviations of WBO distributions with respect to con
 we find that the changes in ELF10 WBO for remote chemical environment changes are usually bigger than the changes in WBO that arise from change in conformation.
 This allows us to use the difference in ELF10 WBO of parent and fragment as a good surrogate to the level of disruption of the chemical environment.
 
-## A simple fragmentation scheme can use the WBO to preserve the chemical environment around a torsion
+### 3.4 A simple fragmentation scheme can use the WBO to preserve the chemical environment around a torsion
 
 ![**Illustration of fragmentation scheme using WBOs**
 First, we find the rotatable bonds and calculate their ELF10 WBOs. Then, for each rotatable bond, we find the minimal fragment as described in the text. Then
@@ -289,7 +289,7 @@ do not want to fragment {#tbl:fgroups}
 
 [*(Add discussion on the changes I made to the Pfizer scheme for our minimal fragment before we start building out and why. Add SI figure justifying it)*]{.banner .lightyellow}
 
-## Fragmentation schemes can be assessed by their ability to preserve the chemical environment while minimizing fragment size
+### 3.5 Fragmentation schemes can be assessed by their ability to preserve the chemical environment while minimizing fragment size
 This fragmentation scheme improves upon [@doi:10.1021/acs.jcim.9b00373], however, it leaves some parameters up to the user. In order to asses various
 thresholds and different fragmentation schemes in general, we generated a diverse set of FDA-approved drug molecules that can be
 a useful validation set. The goal of this set was to find molecules that are challenging to fragment. In other words, molecules
@@ -340,7 +340,7 @@ on the ring and are shifted to the right even more. Since removing the ring bond
 fragment 1, while having two fluorine, is shifted to the left of the parent distribution, fragment 5 WBO distribution overlaps with the parent WBO distribution
 even if it only has one fluorine, and fragment 8 is only shifted slightly to the right of the parent WBO distribution with no fluorine.
 
-### Scoring how well fragments preserve chemical environments using WBO distributions
+#### 3.5.1 Scoring how well fragments preserve chemical environments using WBO distributions
 Each fragment needs to be assigned a score of how well is preserves its parent chemical environment. To score each fragment, we compare
 the conformer dependent WBO distribution for a bond in a fragment against the WBO conformer-dependent distribution of the same bond in the parent molecule.
 To compare these distributions, we compute the maximum mean discrepancy [CITE] for the fragment distribution
@@ -362,7 +362,7 @@ relative barrier heights).
 In figure {@fig:dabrafenib_wbo_dists}, the MMD score, which we call the distance score, is shown with the color map. The
 distributions in {@fig:dabrafenib_wbo_dists}A are shaded with the distance score. The scores clearly differentiates the shifted distributions.
 
-### Good fragmentation schemes minimize both chemical environment disruption and fragment size
+#### 3.5.2 Good fragmentation schemes minimize both chemical environment disruption and fragment size
 The goal of our fragmentation scheme is to find fragments that have a WBO distribution of the bond of interest closest the the parent
 while minimizing the computational cost of the fragment. We estimate the computational cost of a fragment by cubing its number
 of heavy atoms because DFT calculations grow by $O(n^3)$. The distance score calculated with MMD indicates how far the fragment's
@@ -441,7 +441,7 @@ scheme Pfizer used in [@doi:10.1021/acs.jcim.9b00373](figure {@fig:joint_plots},
 Table: Number of fragments in the lower left quadrant in figure {@fig:joint_plots} defined as a distance score less than
 0.1 and computational cost less than 10000. {#tbl:benchmark}
 
-### Benchmark results reveal chemical groups that induce long range effects
+#### 3.5.3 Benchmark results reveal chemical groups that induce long range effects
 
 ![**Using the WBO as an indicator of chemical environment distruption improves fragmentation**
 Distribution of differences in distance scores for fragments in the validation set (SI fig @fig:full_validation_set) generated using
