fixed some formmating

--- a/content/06.detailed_method.md
+++ b/content/06.detailed_method.md
@@ -88,11 +88,7 @@ The dataset is available as zip files on `(hold for link to where we will host t
 The `fragmenter` package provides several fragmentation schemes with various options. Below we discuss different modes of
 fragmentation and their options.
 
-Currently, `fragmenter` depends on OpenEye to provides three modes of fragmentation described here. In the future, `fragmenter`
-will be incorporated into the `openforcefield` toolkit and will have the option to use RDKit [@url:http://www.rdkit.org/],
-an open source cheminformatic libraries. However, given that RDKit supports EHT instead of AM1, the fragments might be different.
-
-1. **Exhaustive fragmentation generates all possible fragments of a parent molecule**.
+#### 5.4.1 Exhaustive fragmentation generates all possible fragments of a parent molecule.
 This functionality is provided by the `CombinatorialFragmenter` class in the `fragment.py` module. To use this class, the user
 needs to provide an openeye molecule. `fragmenter` provides a list of functional groups SMARTS in a yaml file located in `fragmenter/data/fgroup_smarts_combs.yml`
 that it will not fragment by default. This list is given in table @tbl:fgroups_comb. The list is different than the default list used on the `WBOFragmenter`
@@ -120,11 +116,11 @@ different than the list used for the `WBOFragmenter` {#tbl:fgroups_comb}
 
 The user can also set the minimum and maximum number of rotatable bonds, and minimum heavy atoms in a fragment.
 
-2. **Generate minimal fragments**
+#### 5.4.2 Generate minimal fragments
 The `PfizerFragmenter` implements the scheme developed at Pfizer and described in [@doi:10.1021/acs.jcim.9b00373]. It uses the same list
 of functional groups as the `WBOFragmenter` uses. The user can also provide their own SMARTS patterns of functional groups not to fragment.
 
-3. **Using the WBO as a surrogate for changes in chemical environment**
+#### 5.4.3 Using the WBO as a surrogate for changes in chemical environment.
 The `WBOFragmenter` implements the FBO scheme described in this paper. The functional groups that are not fragmented are given in table @tbl:fgroups.
 Users can add more SMARTS patterns if needed.
 
@@ -133,15 +129,19 @@ onto the fragment. However, there are multiple ways to grow out a fragment and e
 can become too computationally expensive. Therefore, we need to use heuristics to decide where to add the next atoms.
 The two heuristics available in `fragmenter` are:
 
-    1. **Shortest path length**
-    Here, the bond with the shortest path to the central bond is added next. The rationale for this heuristic is that atoms closer
-    to the central bond will have a greater influence to the bond's chemical environment. If more than one connected bond has the shortest path
-    to the central bond, the bond with the higher WBO is added next.
+1. **Shortest path length**
+Here, the bond with the shortest path to the central bond is added next. The rationale for this heuristic is that atoms closer
+to the central bond will have a greater influence to the bond's chemical environment. If more than one connected bond has the shortest path
+to the central bond, the bond with the higher WBO is added next.
 
-    2. **Greatest WBO**
-    Here, the bonds connected to the fragment that have the greatest WBO is added next. The rationale for this heuristic is that
-    bonds with higher WBO are more likely to be involved in extended conjugation that can influence the central bond.
+2. **Greatest WBO**
+Here, the bonds connected to the fragment that have the greatest WBO is added next. The rationale for this heuristic is that
+bonds with higher WBO are more likely to be involved in extended conjugation that can influence the central bond.
 
 Both of these heuristics will sometimes give different results `[Hold for SI figure]`{.red}. We found that for the benchmark set we tested,
 the shortest path heuristic preformed better, or found more optimal fragments when compared to using the greatest WBO heuristic `[Hold for SI]`{.red}.
+
+Currently, `fragmenter` depends on OpenEye to provides three modes of fragmentation described here. In the future, `fragmenter`
+will be incorporated into the `openforcefield` toolkit and will have the option to use RDKit [@url:http://www.rdkit.org/],
+an open source cheminformatic libraries. However, given that RDKit supports EHT instead of AM1, the fragments might be different.
 
