--- a/content/02.introduction.md
+++ b/content/02.introduction.md
@@ -34,7 +34,7 @@ of heavy atoms in molecules. All computations shown here were run on an Intel(R)
 Empirically, gradient evaluations grow as $O(N^{2.6})$ where $N$ is the number of heavy atoms. The scaling is similar
 on other processors shown in SI Figures @fig:intel_scaling & @fig:amd_scaling. The black curves shows a power law fit to the data,
 and the grey is the 95% CI of the curve estimate.
-**[B]** Smoothed histogram of heavy atoms in small molecules from DrugBank. The average druglike molecules has 25 heavy atoms.](images/B3LYP_scaling.png){#fig:b3lyp_scaling}
+**[B]** Smoothed histogram of heavy atoms in small molecules from DrugBank. The average druglike molecules has 25 heavy atoms.](images/B3LYP_scaling_1.svg){#fig:b3lyp_scaling}
 
 1. **Computational efforts scale poorly with molecule size**.
 Generating one dimensional QC torsion profiles are computationally expensive and become increasingly inefficient
