added definition section

--- a/content/02.introduction.md
+++ b/content/02.introduction.md
@@ -14,7 +14,13 @@ generalizable parameters.
 
 In many molecular mechanics force fields (e.g., Amber [@doi:10.1021/ja00124a002],
 CHARMM [@doi:10.1002/jcc.540040211], OPLS [@doi:10.1021/ja9621760]) a low-order Fourier series, such as
-a cosine series, is often used to represent the contribution of torsion terms to the potential energy. 
+a cosine series, is often used to represent the contribution of torsion terms to the potential energy.
+
+$$ E_{tor} = \sum_{n=1}^{6} \frac{V_n}{2}[1 + cos n(\theta - \gamma)]$$
+
+where $V_i$ is the torsion force constant which determines the amplitudes, $n$ is the multiplicity which determines the
+number of minimas, and $\gamma$ is the phase angle which is sometimes set to $0^{\circ}$ or $180^{\circ}$ to enforce
+symmetry around zero.
 The torsion potential energy parameters such as amplitudes and phase angles for each Fourier term, 
 are generally fit to the residual difference between gas phase quantum chemistry (QC) torsion energy 
 profile and the non-torsion MM parameters [@doi:10.1007/s00894-008-0305-0]. The QC torsion energy profile
