--- a/content/06.detailed_method.md
+++ b/content/06.detailed_method.md
@@ -2,7 +2,7 @@
 
 ### 5.1 QCArchive automates QC data generation and archives the resulting data
 #### 5.1.1 Submitting computations to QCArchive ensures reproducibility
-`[Hold for Daniel to write up]`{.red}
+`[Hold for Daniel to write up. Please describe how QCArchive runs torsion scans and how to submit and retrieve data]`{.red}
 
 #### 5.1.2 Details on QC and MM torsion scans.
 All QC calculations were computed at B3LYP-D3(BJ) / DZVP. This level of theory was chosen based on benchmark conducted by the
@@ -22,8 +22,9 @@ which is called for the `get_charges` function.
 For AM1 WBOs calculated to verify the results from the validation set, we generated conformers using the `generate_grid_conformer` function in the `chemi.py` module in `fragmenter`
 version v0.0.4.+25.gbb12030
 
-#### 5.2.2 Wiberg-Löwdin
-To calculate Wiberg-Löwdin bond orders `[Leave to Daniel to describe how this option is set in QCArchive]`{.red}
+#### 5.2.2 Wiberg Bond Orders calculated with larger basis sets
+`[Leave to Daniel to describe how Wiberg bond orders are calculated in QCArchive (it only
+calculates Wiberg-Löwdin so provide that formula and why the Löwdin normalization is needed)]`{.red}
 
 ### 5.3 Datasets
 
