--- a/content/03.theory-and-definitions.md
+++ b/content/03.theory-and-definitions.md
@@ -1,7 +1,37 @@
-## 2. Theory
+## 2. Theory and definitions
 
-[TBD]{.banner .lightyellow}
+### 2.1 A mathematical definition of the problem
 
-- Define problem mathematically 
-- Define the problem physically
-- Define conjugation and hyperconjugation (most systems here are hyperconjugation)
+A molecular structure can be modeled as a degree bounded graph $G = (V, E)$ where $V$ are the nodes and $E$ are the edges.
+In a molecular graph, the nodes correspond to the atoms and the bonds correspond to the edges.
+We define rotatable bonds as bonds that are not in rings and they are subset of edges, $e' \in E$.
+
+The weights on the edges are given by $\delta(e')$ where $\delta$ is the RMSE of the torsion potential around the bond in
+the full graph vs. a subgraph. We want to find a set of partitions $v of V$ such that for all $v' \in v$, $v' \leq k$ where
+k is an integer $4 \leq K \leq |V|-1$. The subgraph $G[v']$ induced by $v'$ is connected and has a minimal total error
+
+$$Total RMSE =  \sum_{v' \in v} |\delta(e')|$${eq:graph}
+
+where $e'$ is the central, rotatable bond in the subgraph $v'$.
+
+Since the $\delta(e')$, RMSE of the torsion scans are expensive to calculate, we use a surrogate, $\gamma(e')$, which we
+define as the difference of the WBO on the central bond. We want to minimize @eq:graph subject to the constraint of minimizing
+$v'$.
+
+`[Show that this is a very expensive problem so we use heuristics as described in the rest of the paper]`{.red}
+
+### 2.2 Physical definitions
+
+The torsion energy of a bond is determined by a combination of effects from conjugation, hyperconjugation, sterics and electrostatics
+[@doi:10.1021/acs.jcim.9b00585; @doi:10.1021/acs.jcim.7b00645; @doi:10.1038/35079036; @doi:10.1021/jp046290d].
+While sterics and elecrostatics are usually local properties or can be controlled by using smaller fragments, conjugation and
+hyperconjugation are non local properties and remote chemical changes can influence the extent of conjugation and / or hyperconjugation.
+In this study, we aim to mitigate the effects of remote chemical changes on conjugation and hyperconjugation by understanding how
+the extent of binding changes with remote chemical changes. Here we define conjugation and hyperconjugation and how we use these
+terms in this paper.
+
+Conjugation is defined as the overlap of p-orbital electrons across $\sigma$ bonds [@doi:10.1002/jlac.18993060107; @url:https://goldbook.iupac.org/terms/view/C01267] such as what occurs in
+benzene or butadiene. Hyperconjugation is the interactions of electrons in a donating bonding orbital to an anti-bonding orbital [@doi:10.1021/ja01846a008].
+There are several modes of hyperconjugation such as $\sigma \to \sigma^*$, $\sigma \to \pi^*$, and $\pi \to \sigma^*$. In this study, for simplicity,
+we use the term conjugation to refer to all modes of conjugation and hyperconjugation.
+
